--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=t
 spring.datasource.username=root
 spring.datasource.password=Vivek@@1999
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
